--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "DEBUG='job-seeker*' jest -i",
+    "coverage": "DEBUG='job-seeker*' jest --coverage",
+    "start": "DEBUG='job-seeker*' node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,24 @@
   "bugs": {
     "url": "https://github.com/job-seeker/job-seeker-backend/issues"
   },
-  "homepage": "https://github.com/job-seeker/job-seeker-backend#readme"
+  "homepage": "https://github.com/job-seeker/job-seeker-backend#readme",
+  "dependencies": {
+    "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "debug": "^3.1.0",
+    "del": "^3.0.0",
+    "dotenv": "^5.0.1",
+    "eslint": "^4.18.2",
+    "express": "^4.16.2",
+    "http-errors": "^1.6.2",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.9",
+    "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "jest": "^22.4.2",
+    "superagent": "^3.8.2"
+  }
 }
