--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "directories": {
     "lib": "lib"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "scripts": {
-    "test": "DEBUG='job-seeker*' jest -i",
-    "coverage": "DEBUG='job-seeker*' jest --coverage",
+    "test": "DEBUG='job-seeker*' jest -i --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "start": "DEBUG='job-seeker*' node server.js"
   },
   "repository": {
