--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "coveralls": "^3.0.0",
     "debug": "^3.1.0",
     "del": "^3.0.0",
     "dotenv": "^5.0.1",
     "eslint": "^4.18.2",
     "express": "^4.16.2",
     "http-errors": "^1.6.2",
+    "istanbul": "^0.4.5",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.9",
     "morgan": "^1.9.0"
