--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "jest": "^22.4.2",
     "superagent": "^3.8.2"
   }
